// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component renders a number input 1`] = `
.sx1up9i {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  height: var(--sizes-2);
  width: 100%;
  padding: var(--space-3);
  transition: all 100ms ease-out;
}

.sx1up9i:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sx1up9i[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal700);
  cursor: not-allowed;
}

.sx1up9i-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

<div>
  <input
    class="sx1up9i sx1up9i-6obnf"
    inputmode="numeric"
    pattern="[0-9]*"
    placeholder="001"
    type="text"
  />
</div>
`;

exports[`Input component renders a text input 1`] = `
.sx1up9i {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  height: var(--sizes-2);
  width: 100%;
  padding: var(--space-3);
  transition: all 100ms ease-out;
}

.sx1up9i:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sx1up9i[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal700);
  cursor: not-allowed;
}

.sx1up9i-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

<div>
  <input
    class="sx1up9i sx1up9i-6obnf"
    placeholder="INPUT"
    type="text"
  />
</div>
`;
